components/invitation_modal/invitation_modal_confirm_step_table.scss
@import 'utils/variables';

.InvitationModalConfirmStepTable {
    //max-width: 720px;
    //width: 100%;
    width: 720px;
    @media screen and (max-width: 768px) { //@jesus this doesn't quiet work right... when i inspect i see that flex box is doing something here
        width:100%;
    }
    .table-header {
        display: flex;
        border-bottom: 1px solid green;
        .people-header, .details-header {
            margin: 12px;
            width: 50%;
            font-weight: bold;
            display: flex;
            align-items: center;
        }
        span {
            display: flex;
        }
        svg {
            align-self: end;
            transform: rotate(90deg);
            fill: var(--center-channel-color);
            height: 18px;
            width: 18px;
            margin-right: 2px;
        }
    }
}

